[package]
name = "timekeeper"
version = "1.1.0"
authors = ["Rui Lopes <ruieduardo.fa.lopes@av.it.pt>"]
edition = "2018"

[dependencies]
arrayref = "0.3"
clap = "2.33"
chrono = "0.4"
libc = "0.2"
slog = "2.4"
slog-term = "2.4"
slog-async = "2.3"
time = "0.1"

[features]
default = [ "linux" ]
linux = []
mips = []
arm = []